# sflt

./: .gitignore  CLAUDE.md  FEATURE-BRANCH-CDK-STRATEGY.md  FEATURE-BRANCH-USAGE.md  IMPLEMENTATION-ROADMAP.md  MIGRATION-ANALYSIS.md  Makefile  OAUTH_FLOW.md  PRD-improved.md  PRD-v2.md  PRD.md  README.md  REUSABLE-PATTERNS.md  TASK-HIERARCHY.md  TODO.md  app.py  cdk.json  diagram.dot  playwright.config.py  pyproject.toml  pytest.ini
.claude-code/: mcp.json
cdk/: auth_stack.py  config.py  lambda_edge_stack.py  static_site_stack.py
cdk/lambda-edge/: auth_handler.py  auth_handler.py.template
e2e/: conftest.py
e2e/tests/: test_homepage.py  test_navigation.py  test_performance.py  test_protected_routes.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.js  test-amplify-config.js  vite.config.js
frontend/e2e/: auth-flow.spec.js  console-errors.spec.js  oauth-success.spec.js
frontend/src/: App.css  App.jsx  aws-exports.js  aws-exports.js.template
frontend/src/components/: AdminPage.jsx  AuthCallback.jsx  AuthManager.jsx  DashboardPage.jsx  Navigation.jsx  NotFoundPage.jsx  ProfilePage.jsx  ProtectedRoute.jsx  PublicPage.jsx
frontend/src/contexts/: AuthContext.jsx
scripts/: CLAUDE.md  check_lambda_propagation.py  cleanup_feature_branches.py  deploy_orchestrator.py  destroy_orchestrator.py  diagnose_oauth.py  generate_aws_exports.py  generate_configs.py  generate_lambda_code.py  orchestration_utils.py  test_convergence.py  test_oauth_flow.py  triage_deployment.py
tests/: test_stack.py
(+1 files in other folders)
